<resources>
    <string name="app_name">Podcast</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="podcast">Podcast</string>
    <string name="dummy">Having a personalized domain name will make you stand out of the crowd and let your audience and clients recognize your brand. So, whether you decide on</string>
    <string name="up_next">Up Next</string>
    <string name="dummy_pod_cast_title">Women in Tech Podcast</string>
    <string name="dummy_pod_cast_description">The #womanintech Show is a...</string>
    <string name="dummy_hour_left">1h left</string>
    <string name="zz">Zz</string>
    <string name="_1x">1x</string>
    <string name="art_amp_design"><![CDATA[ART & DESIGN]]></string>
    <string name="title_activity_pod_cast_detail">PodCastDetailActivity</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="categories">Categories</string>
    <string name="dummy_been_time">05:15</string>
    <string name="dummy_pod_cast_detail_title">Designing for everyone, Designing with K Thari.</string>
    <string name="dummy_pod_cast_long_description">Take your career to the next level by showing your prospective clients just how awesome you are by making your personal website with a personalized domain name. Having a personalized domain name will make you stand out of the crowd and let your audience and clients recognize your brand. So, whether you decide on yourname.me, or use a wll-known alias, like bingband.me,. ME domain is uniquely positioned to help you create a captivating online persona that\'s a direct refelctio of</string>
    <string name="your_show">Shows</string>
    <string name="your">Your  </string>
    <string name="you_have_no_downloaded_podcasts">You Have No Downloaded PodCasts.</string>
</resources>