<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_vertical"
    android:layout_marginBottom="@dimen/margin_medium_2"
    android:paddingBottom="@dimen/margin_medium_2"
    android:weightSum="1.3">

    <androidx.cardview.widget.CardView
        android:id="@+id/ivPodCast"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignParentStart="true"
        app:cardCornerRadius="25dp">
        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/placeholder"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:scaleType="centerCrop"
            app:srcCompat="@mipmap/placeholder"/>
    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:id="@+id/llPodCast"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/ivPodCast"
        android:orientation="vertical">
        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardCornerRadius="@dimen/margin_medium_2"
            android:layout_marginStart="@dimen/margin_medium_2"
            app:cardBackgroundColor="@color/categoryColorArtAndDesign">
            <TextView
                android:id="@+id/type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/art_amp_design"
                android:padding="@dimen/margin_medium"/>
        </androidx.cardview.widget.CardView>
        <TextView
            android:id="@+id/tvPodCastTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_regular_2x"
            android:text="@string/dummy_pod_cast_title"
            android:padding="@dimen/margin_medium_2"/>
        <TextView
            android:id="@+id/tvPodCastDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/textColorTertiary"
            android:maxLines="4"
            android:paddingStart="@dimen/margin_medium_2"
            android:paddingEnd="@dimen/margin_medium_2"
            android:text="@string/dummy_pod_cast_description"/>
        <LinearLayout
            android:id="@+id/llDownloadProgress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingStart="@dimen/margin_medium_2"
            android:paddingEnd="@dimen/margin_medium"
            android:weightSum="1.2">
            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:progress="80"
                android:progressTint="@color/progressBarColor"
                style="@style/Widget.AppCompat.ProgressBar.Horizontal"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.2"
                android:layout_marginStart="@dimen/margin_medium"
                android:text="@string/dummy_hour_left"/>
        </LinearLayout>
    </LinearLayout>

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivDownload"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@mipmap/download"
        app:tint="@color/colorPrimary"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="@dimen/margin_medium_2" />

</RelativeLayout>