<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="25dp"
    app:cardBackgroundColor="@color/bgColorPrimary">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/margin_medium_2"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_medium_2"
            android:layout_marginBottom="@dimen/margin_medium_2"
            android:orientation="horizontal">

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cardCornerRadius="25dp">
                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/placeholder"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    app:srcCompat="@mipmap/placeholder"/>
            </androidx.cardview.widget.CardView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="@dimen/margin_medium"
                android:layout_marginStart="@dimen/margin_medium_3">
                <TextView
                    android:id="@+id/tvPodCastTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/text_regular_2x"
                    android:textColor="@android:color/white"
                    android:ellipsize="end"
                    android:layout_marginBottom="@dimen/margin_medium"
                    android:text="@string/dummy_pod_cast_title"/>
                <TextView
                    android:id="@+id/tvPodCastDescription"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/text_regular_2x"
                    android:textColor="@android:color/white"
                    android:ellipsize="end"
                    android:maxLines="3"
                    android:text="@string/dummy_pod_cast_description"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="@dimen/margin_medium"
                    android:weightSum="1.2">
                    <com.google.android.exoplayer2.ui.DefaultTimeBar
                        android:id="@+id/timeBar"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:progressTint="@color/progressBarColor"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/progressBarColor"
                        android:layout_marginStart="@dimen/margin_medium_2"
                        android:text="@string/dummy_hour_left"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
        <com.google.android.exoplayer2.ui.PlayerControlView
            android:id="@+id/playerControlView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:controller_layout_id="@layout/layout_exo_controller"/>
    </LinearLayout>
</androidx.cardview.widget.CardView>